Move PhoebusApplication to ui, use docking